Adiciona tela de cadastro de usuário

--- a/Nucleo/InterfacesVisuais/Properties/Resources.resx
+++ b/Nucleo/InterfacesVisuais/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="logon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconfinder_sign-info_299086" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconfinder_sign-info_299086.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
